--- a/personal-projects.html
+++ b/personal-projects.html
@@ -17,7 +17,7 @@
       <li><a href="about.html">About Me</a></li>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="achievements.html">Achievements</a></li>
-      <li><a href="personal-projects.html" class="link-active-glow">Personal Projects</a></li>
+      <li><a href="personal-projects.html" class="active-nav-link">Personal Projects</a></li>
     </ul>
   </div>
 </nav>
@@ -34,55 +34,63 @@
   <a href="personal-projects.html" class="link-active-glow">Personal Projects</a>
 </div>
 
-<main class="centered-content-block fade-in-section personal-projects-page">
-  <h1>Learning Outside of Class</h1>
+<main class="fade-in-section about-grid">
 
-  <h2>Clubs & Campus Activities</h2>
-  <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
-  <ul>
-    <li>Utah Criminology Student Association</li>
-    <li>SLCC Student Nurse Organization</li>
-  </ul>
+  <h1 class="about-heading">Learning Outside of Class</h1>
 
-  <h2>Hobbies & Talents</h2>
-  <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
+  <div class="section-box">
+    <h2>Clubs & Campus Activities</h2>
+    <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
+    <ul>
+      <li>Utah Criminology Student Association</li>
+      <li>SLCC Student Nurse Organization</li>
+    </ul>
+  </div>
 
-  <h3>Gaming & Technology</h3>
-  <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
+  <div class="section-box">
+    <h2>Hobbies & Talents</h2>
+    <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
 
-  <h3>Healthcare & Nursing</h3>
-  <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
+    <h3>Gaming & Technology</h3>
+    <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
 
-  <h3>Automotive & Driving</h3>
-  <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
+    <h3>Healthcare & Nursing</h3>
+    <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
 
-  <h3>Writing & Creativity</h3>
-  <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
+    <h3>Automotive & Driving</h3>
+    <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
 
-  <h3>Cultural Connection & Family</h3>
-  <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
+    <h3>Writing & Creativity</h3>
+    <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
 
-  <h2>Work, Travel, Volunteer, & Service</h2>
+    <h3>Cultural Connection & Family</h3>
+    <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
+  </div>
 
-  <h3>Work Experience</h3>
-  <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
+  <div class="section-box">
+    <h2>Work, Travel, Volunteer, & Service</h2>
 
-  <h3>Travel</h3>
-  <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
+    <h3>Work Experience</h3>
+    <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
 
-  <h3>Volunteer</h3>
-  <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
+    <h3>Travel</h3>
+    <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
 
-  <h3>Services I’ve Provided</h3>
-  <ul>
-    <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
-    <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
-    <li><strong>Community Engagement:</strong> Healthcare volunteer work and charity events.</li>
-  </ul>
+    <h3>Volunteer</h3>
+    <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
 
-  <div style="text-align: center; margin-top: 40px;">
+    <h3>Services I’ve Provided</h3>
+    <ul>
+      <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
+      <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
+      <li><strong>Community Engagement:</strong> Healthcare volunteer work and charity events.</li>
+    </ul>
+  </div>
+
+  <div style="text-align: center; margin-top: 30px;">
     <a href="courses.html" class="button">← Back to Courses</a>
   </div>
+
 </main>
 
 <footer>
@@ -94,32 +102,25 @@ function toggleMenu() {
   const mobileNav = document.getElementById('mobile-nav');
   const hamburgerIcon = document.getElementById('hamburger-menu');
   const body = document.body;
-
   mobileNav.classList.toggle('active');
   hamburgerIcon.classList.toggle('is-active');
-  if (mobileNav.classList.contains('active')) {
-    body.classList.add('no-scroll');
-  } else {
-    body.classList.remove('no-scroll');
-  }
+  body.classList.toggle('no-scroll', mobileNav.classList.contains('active'));
 }
 </script>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
+document.addEventListener('DOMContentLoaded', function () {
   const faders = document.querySelectorAll('.fade-in-section');
   const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -100px 0px" };
-  const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll) {
+  const appearOnScroll = new IntersectionObserver(function (entries, observer) {
     entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('is-visible');
-        appearOnScroll.unobserve(entry.target);
-      }
+      if (!entry.isIntersecting) return;
+      entry.target.classList.add('is-visible');
+      observer.unobserve(entry.target);
     });
   }, appearOptions);
-  faders.forEach(fader => {
-    appearOnScroll.observe(fader);
-  });
+
+  faders.forEach(fader => appearOnScroll.observe(fader));
 });
 </script>
 
