--- a/personal-projects.html
+++ b/personal-projects.html
@@ -34,57 +34,68 @@
   <a href="personal-projects.html" class="link-active-glow">Personal Projects</a>
 </div>
 
-<main class="fade-in-section about-grid">
+<main class="fade-in-section">
 
   <h1 class="about-heading">Learning Outside of Class</h1>
 
-  <div class="section-box">
-    <h2>Clubs & Campus Activities</h2>
-    <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
-    <ul>
-      <li>Utah Criminology Student Association</li>
-      <li>SLCC Student Nurse Organization</li>
-    </ul>
-  </div>
+  <div class="about-grid">
 
-  <div class="section-box">
-    <h2>Hobbies & Talents</h2>
-    <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
+    <!-- Clubs Block -->
+    <div class="section-box">
+      <h2>Clubs & Campus Activities</h2>
+      <ul>
+        <li>Utah Criminology Student Association</li>
+        <li>SLCC Student Nurse Organization</li>
+      </ul>
+    </div>
 
-    <h3>Gaming & Technology</h3>
-    <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
+    <!-- Hobbies Block -->
+    <div class="section-box">
+      <h2>Hobbies & Talents</h2>
 
-    <h3>Healthcare & Nursing</h3>
-    <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
+      <h3>Gaming & Technology</h3>
+      <p>I love gaming on Xbox, learning tech setups, and optimizing performance...</p>
 
-    <h3>Automotive & Driving</h3>
-    <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
+      <h3>Healthcare & Nursing</h3>
+      <p>As a nursing student and dialysis tech, I’m constantly learning...</p>
 
-    <h3>Writing & Creativity</h3>
-    <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
+      <h3>Automotive & Driving</h3>
+      <p>I’m a manual transmission nerd...</p>
 
-    <h3>Cultural Connection & Family</h3>
-    <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
-  </div>
+      <h3>Writing & Creativity</h3>
+      <p>Humor, inspiration, and storytelling are my outlets...</p>
 
-  <div class="section-box">
-    <h2>Work, Travel, Volunteer, & Service</h2>
+      <h3>Cultural Connection</h3>
+      <p>Growing up Mexican shaped my values, drive, and identity...</p>
+    </div>
 
-    <h3>Work Experience</h3>
-    <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
+    <!-- Work Block -->
+    <div class="section-box">
+      <h2>Work, Travel, Volunteer, & Service</h2>
 
-    <h3>Travel</h3>
-    <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
+      <h3>Work Experience</h3>
+      <p>I currently work in healthcare—dialysis, pediatrics, and senior care...</p>
 
-    <h3>Volunteer</h3>
-    <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
+      <h3>Travel</h3>
+      <p>I’ve traveled both domestically and internationally...</p>
 
-    <h3>Services I’ve Provided</h3>
-    <ul>
-      <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
-      <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
-      <li><strong>Community Engagement:</strong> Healthcare volunteer work and charity events.</li>
-    </ul>
+      <h3>Volunteer</h3>
+      <p>I volunteer in healthcare settings and mentor students...</p>
+
+      <h3>Services I’ve Provided</h3>
+      <ul>
+        <li><strong>Mentoring:</strong> Real estate and healthcare advice</li>
+        <li><strong>Tutoring:</strong> Helping peers with coursework</li>
+        <li><strong>Community Engagement:</strong> Charity events and volunteer work</li>
+      </ul>
+    </div>
+
+    <!-- Project Placeholder -->
+    <div class="section-box">
+      <h2>Personal Projects</h2>
+      <p>Coming soon: portfolio pieces, writing samples, and interactive work!</p>
+    </div>
+
   </div>
 
   <div style="text-align: center; margin-top: 30px;">
