--- a/personal-projects.html
+++ b/personal-projects.html
@@ -34,7 +34,7 @@
   <a href="personal-projects.html" class="link-active-glow">Personal Projects</a>
 </div>
 
-<main class="centered-content-block fade-in-section">
+<main class="personal-projects-page fade-in-section">
   <h1>Learning Outside of Class</h1>
 
   <div class="info-box fade-in-section">
