--- a/personal-projects.html
+++ b/personal-projects.html
@@ -37,7 +37,7 @@
 <main class="personal-projects-page fade-in-section">
   <h1>Learning Outside of Class</h1>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Clubs & Campus Activities</h3>
     <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
     <ul>
@@ -46,52 +46,52 @@
     </ul>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Hobbies & Talents</h3>
     <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Gaming & Technology</h3>
     <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Healthcare & Nursing</h3>
     <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Automotive & Driving</h3>
     <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Writing & Creativity</h3>
     <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Cultural Connection & Family</h3>
     <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Work Experience</h3>
     <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Travel</h3>
     <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Volunteer</h3>
     <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
   </div>
 
-  <div class="info-box fade-in-section">
+  <div class="info-block fade-in-section">
     <h3>Services I’ve Provided</h3>
     <ul>
       <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
