--- a/personal-projects.html
+++ b/personal-projects.html
@@ -37,68 +37,77 @@
 <main class="personal-projects-page fade-in-section">
   <h1>Learning Outside of Class</h1>
 
-  <div class="info-block fade-in-section">
-    <h3>Clubs & Campus Activities</h3>
-    <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
-    <ul>
-      <li>Utah Criminology Student Association</li>
-      <li>SLCC Student Nurse Organization</li>
-    </ul>
-  </div>
+  <!-- SECTION 1: CLUBS & CAMPUS -->
+  <section>
+    <div class="info-block">
+      <h2>Clubs & Campus Activities</h2>
+      <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
+      <ul>
+        <li>Utah Criminology Student Association</li>
+        <li>SLCC Student Nurse Organization</li>
+      </ul>
+    </div>
+  </section>
 
-  <div class="info-block fade-in-section">
-    <h3>Hobbies & Talents</h3>
-    <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. While majoring in healthcare & criminal justice, I’ve also explored real estate, property management, and earned CLEP exam scores just for fun. These diverse experiences sharpened my work ethic and broadened my skills.</p>
-  </div>
+  <!-- SECTION 2: HOBBIES & TALENTS -->
+  <section>
+    <div class="info-block">
+      <h2>Hobbies & Talents</h2>
+      <p>I have many interests that shape who I am and contribute to my personal growth — from healthcare to gaming, real estate, and more. These diverse experiences broaden my skills and sharpen my work ethic.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Gaming & Technology</h3>
-    <p>I love gaming on Xbox, learning tech setups, and optimizing performance. Gaming taught me patience, teamwork, and problem-solving.</p>
-  </div>
+    <div class="info-block">
+      <h3>Gaming & Technology</h3>
+      <p>I love gaming on Xbox and optimizing setups. It’s taught me patience, teamwork, and tech problem-solving.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Healthcare & Nursing</h3>
-    <p>As a nursing student and dialysis tech, I’m constantly learning. Observing clinicals and helping others is something I take pride in.</p>
-  </div>
+    <div class="info-block">
+      <h3>Healthcare & Nursing</h3>
+      <p>As a nursing student and dialysis tech, I take pride in learning from clinicals and directly helping others.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Automotive & Driving</h3>
-    <p>I’m a manual transmission nerd. Jeep Wranglers, car mechanics, and the independence of driving are all things I love.</p>
-  </div>
+    <div class="info-block">
+      <h3>Automotive & Driving</h3>
+      <p>I’m a manual transmission nerd. Jeep Wranglers, mechanics, and the freedom of driving? All me.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Writing & Creativity</h3>
-    <p>Humor, inspiration, and storytelling are my outlets. I write to entertain, motivate, and connect through authentic expression.</p>
-  </div>
+    <div class="info-block">
+      <h3>Writing & Creativity</h3>
+      <p>Humor and storytelling are my therapy. I write to entertain, motivate, and connect through raw expression.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Cultural Connection & Family</h3>
-    <p>Growing up Mexican shaped my values, drive, and identity. Every goal I pursue is a tribute to my family’s sacrifices and resilience.</p>
-  </div>
+    <div class="info-block">
+      <h3>Cultural Connection & Family</h3>
+      <p>Growing up Mexican shaped my values and drive. Everything I do honors my family’s sacrifices.</p>
+    </div>
+  </section>
 
-  <div class="info-block fade-in-section">
-    <h3>Work Experience</h3>
-    <p>I currently work in healthcare—dialysis, pediatrics, and senior care—and manage real estate/property on the side. I balance both fields while continuing my nursing education.</p>
-  </div>
+  <!-- SECTION 3: WORK / TRAVEL / VOLUNTEER -->
+  <section>
+    <div class="info-block">
+      <h2>Work Experience</h2>
+      <p>I work in healthcare—dialysis, pediatrics, senior care—and manage real estate on the side while continuing my education.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Travel</h3>
-    <p>I’ve traveled both domestically and internationally, especially to Mexico, to connect with my roots. It’s shaped my cultural competence and empathy in healthcare.</p>
-  </div>
+    <div class="info-block">
+      <h3>Travel</h3>
+      <p>I’ve traveled domestically and to Mexico to connect with my roots. These trips shaped my empathy and cultural competence.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Volunteer</h3>
-    <p>I volunteer in healthcare settings and mentor students interested in nursing and real estate. I believe in giving back and supporting others' growth.</p>
-  </div>
+    <div class="info-block">
+      <h3>Volunteer Work</h3>
+      <p>I volunteer in healthcare settings and mentor students in both nursing and real estate. Giving back is essential to me.</p>
+    </div>
 
-  <div class="info-block fade-in-section">
-    <h3>Services I’ve Provided</h3>
-    <ul>
-      <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
-      <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
-      <li><strong>Community Engagement:</strong> Healthcare volunteer work and charity events.</li>
-    </ul>
-  </div>
+    <div class="info-block">
+      <h3>Services I’ve Provided</h3>
+      <ul>
+        <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
+        <li><strong>Tutoring:</strong> Supporting peers academically.</li>
+        <li><strong>Community Engagement:</strong> Volunteering and organizing charity events.</li>
+      </ul>
+    </div>
+  </section>
 
   <div style="text-align: center; margin-top: 40px;">
     <a href="courses.html" class="button">← Back to Courses</a>
