--- a/personal-projects.html
+++ b/personal-projects.html
@@ -51,36 +51,33 @@
 
   <!-- SECTION 2: HOBBIES & TALENTS -->
   <section>
-    <div class="info-block">
-      <h2>Hobbies & Talents</h2>
-      <p>I have many interests that shape who I am and contribute to my personal growth — from healthcare to gaming, real estate, and more. These diverse experiences broaden my skills and sharpen my work ethic.</p>
-    </div>
-
+  <h2 class="info-row-heading">Hobbies & Talents</h2>
+  <div class="info-row">
     <div class="info-block">
       <h3>Gaming & Technology</h3>
       <p>I love gaming on Xbox and optimizing setups. It’s taught me patience, teamwork, and tech problem-solving.</p>
     </div>
-
     <div class="info-block">
       <h3>Healthcare & Nursing</h3>
       <p>As a nursing student and dialysis tech, I take pride in learning from clinicals and directly helping others.</p>
     </div>
+  </div>
 
+  <div class="info-row">
     <div class="info-block">
       <h3>Automotive & Driving</h3>
       <p>I’m a manual transmission nerd. Jeep Wranglers, mechanics, and the freedom of driving? All me.</p>
     </div>
-
     <div class="info-block">
       <h3>Writing & Creativity</h3>
       <p>Humor and storytelling are my therapy. I write to entertain, motivate, and connect through raw expression.</p>
     </div>
-
     <div class="info-block">
       <h3>Cultural Connection & Family</h3>
       <p>Growing up Mexican shaped my values and drive. Everything I do honors my family’s sacrifices.</p>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- SECTION 3: WORK / TRAVEL / VOLUNTEER -->
   <section>
