--- a/personal-projects.html
+++ b/personal-projects.html
@@ -35,76 +35,55 @@
 </div>
 
 <main class="personal-projects-page fade-in-section">
+
   <h1>Learning Outside of Class</h1>
 
-  <!-- SECTION 1: CLUBS & CAMPUS -->
-  <section>
-    <div class="info-block">
-      <h2>Clubs & Campus Activities</h2>
-      <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class. I’m involved with:</p>
-      <ul>
-        <li>Utah Criminology Student Association</li>
-        <li>SLCC Student Nurse Organization</li>
-      </ul>
-    </div>
-  </section>
+  <div class="section-row">
 
-  <!-- SECTION 2: HOBBIES & TALENTS -->
-  <section>
-  <h2 class="info-row-heading">Hobbies & Talents</h2>
-  <div class="info-row">
-    <div class="info-block">
-      <h3>Gaming & Technology</h3>
-      <p>I love gaming on Xbox and optimizing setups. It’s taught me patience, teamwork, and tech problem-solving.</p>
-    </div>
-    <div class="info-block">
-      <h3>Healthcare & Nursing</h3>
-      <p>As a nursing student and dialysis tech, I take pride in learning from clinicals and directly helping others.</p>
-    </div>
+    <!-- Column 1: Clubs -->
+    <section class="info-column">
+      <div class="info-block">
+        <h3>Clubs & Campus Activities</h3>
+        <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class.</p>
+        <ul>
+          <li>Utah Criminology Student Association</li>
+          <li>SLCC Student Nurse Organization</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Column 2: Hobbies & Talents -->
+    <section class="info-column">
+      <div class="info-block">
+        <h3>Hobbies & Talents</h3>
+        <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. My background includes real estate, CLEP exams for fun, and exploring different roles that shaped my work ethic and broadened my skills.</p>
+        <p><strong>Gaming & Technology:</strong> Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
+        <p><strong>Healthcare & Nursing:</strong> As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
+        <p><strong>Automotive & Driving:</strong> I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
+        <p><strong>Writing & Creativity:</strong> Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
+        <p><strong>Cultural Connection & Family:</strong> My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
+      </div>
+    </section>
+
+    <!-- Column 3: Work, Travel, Service -->
+    <section class="info-column">
+      <div class="info-block">
+        <h3>Work / Travel / Volunteer / Service</h3>
+        <p><strong>Work Experience:</strong> I work in dialysis, pediatrics, and senior care while managing real estate. Nursing school is in progress too.</p>
+        <p><strong>Travel:</strong> Domestic and international, especially Mexico. These trips shaped my cultural awareness and empathy in care work.</p>
+        <p><strong>Volunteer:</strong> I help in healthcare settings and mentor students pursuing nursing or real estate careers.</p>
+        <p><strong>Services I’ve Provided:</strong></p>
+        <ul>
+          <li><strong>Mentoring:</strong> Real estate and healthcare career advice</li>
+          <li><strong>Tutoring:</strong> Academic support for nursing and real estate students</li>
+          <li><strong>Community Engagement:</strong> Volunteering in healthcare and charity events</li>
+        </ul>
+      </div>
+    </section>
+
   </div>
 
-  <div class="info-row">
-    <div class="info-block">
-      <h3>Automotive & Driving</h3>
-      <p>I’m a manual transmission nerd. Jeep Wranglers, mechanics, and the freedom of driving? All me.</p>
-    </div>
-    <div class="info-block">
-      <h3>Writing & Creativity</h3>
-      <p>Humor and storytelling are my therapy. I write to entertain, motivate, and connect through raw expression.</p>
-    </div>
-    <div class="info-block">
-      <h3>Cultural Connection & Family</h3>
-      <p>Growing up Mexican shaped my values and drive. Everything I do honors my family’s sacrifices.</p>
-    </div>
-  </div>
-</section>
-
-  <!-- SECTION 3: WORK / TRAVEL / VOLUNTEER -->
-  <section>
-    <div class="info-block">
-      <h2>Work Experience</h2>
-      <p>I work in healthcare—dialysis, pediatrics, senior care—and manage real estate on the side while continuing my education.</p>
-    </div>
-
-    <div class="info-block">
-      <h3>Travel</h3>
-      <p>I’ve traveled domestically and to Mexico to connect with my roots. These trips shaped my empathy and cultural competence.</p>
-    </div>
-
-    <div class="info-block">
-      <h3>Volunteer Work</h3>
-      <p>I volunteer in healthcare settings and mentor students in both nursing and real estate. Giving back is essential to me.</p>
-    </div>
-
-    <div class="info-block">
-      <h3>Services I’ve Provided</h3>
-      <ul>
-        <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
-        <li><strong>Tutoring:</strong> Supporting peers academically.</li>
-        <li><strong>Community Engagement:</strong> Volunteering and organizing charity events.</li>
-      </ul>
-    </div>
-  </section>
+</main>
 
   <div style="text-align: center; margin-top: 40px;">
     <a href="courses.html" class="button">← Back to Courses</a>
