--- a/personal-projects.html
+++ b/personal-projects.html
@@ -41,7 +41,7 @@
   <div class="section-row">
 
     <!-- Column 1: Clubs -->
-    <section class="info-column">
+   <section class="info-column">
       <div class="info-block">
         <h3>Clubs & Campus Activities</h3>
         <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class.</p>
@@ -54,16 +54,36 @@
 
     <!-- Column 2: Hobbies & Talents -->
     <section class="info-column">
-      <div class="info-block">
-        <h3>Hobbies & Talents</h3>
-        <p>Outside of academics, I have many interests that shape who I am and contribute to my personal growth. My background includes real estate, CLEP exams for fun, and exploring different roles that shaped my work ethic and broadened my skills.</p>
-        <p><strong>Gaming & Technology:</strong> Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
-        <p><strong>Healthcare & Nursing:</strong> As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
-        <p><strong>Automotive & Driving:</strong> I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
-        <p><strong>Writing & Creativity:</strong> Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
-        <p><strong>Cultural Connection & Family:</strong> My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
-      </div>
-    </section>
+      <div class="info-section">
+  <h2>Hobbies & Talents</h2>
+  <div class="section-row">
+    <div class="info-box">
+      <h3>Gaming & Technology</h3>
+      <p>Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Healthcare & Nursing</h3>
+      <p>As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Automotive & Driving</h3>
+      <p>I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Writing & Creativity</h3>
+      <p>Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
+    </div>
+
+    <div class="info-box">
+      <h3>Cultural Connection & Family</h3>
+      <p>My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
+    </div>
+  </div>
+  </div>
+ </section>
 
     <!-- Column 3: Work, Travel, Service -->
     <section class="info-column">
