--- a/personal-projects.html
+++ b/personal-projects.html
@@ -38,67 +38,59 @@
 
   <h1>Learning Outside of Class</h1>
 
-  <div class="section-row">
-
-    <!-- Column 1: Clubs -->
-    <section class="info-column">
-      <div class="info-block">
-        <h3>Clubs & Campus Activities</h3>
-        <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class.</p>
-        <ul>
-          <li>Utah Criminology Student Association</li>
-          <li>SLCC Student Nurse Organization</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Column 2: Hobbies & Talents -->
-  <section class="info-column">
-      <div class="info-section">
-        <h2>Hobbies & Talents</h2>
-        <div class="section-row">
-          <div class="info-box">
-          <h3>Gaming & Technology</h3>
-          <p>Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
-        </div>
-
-    <div class="info-box">
-      <h3>Healthcare & Nursing</h3>
-      <p>As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
-    </div>
-
-    <div class="info-box">
-      <h3>Automotive & Driving</h3>
-      <p>I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
-    </div>
-
-    <div class="info-box">
-      <h3>Writing & Creativity</h3>
-      <p>Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
-    </div>
-
-    <div class="info-box">
-      <h3>Cultural Connection & Family</h3>
-      <p>My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
-    </div>
+<!-- Row 1: Clubs -->
+<div class="info-row">
+  <div class="info-box">
+    <h3>Clubs & Campus Activities</h3>
+    <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class.</p>
+    <ul>
+      <li>Utah Criminology Student Association</li>
+      <li>SLCC Student Nurse Organization</li>
+    </ul>
   </div>
 </div>
-  </section>
 
-    <!-- Column 3: Work, Travel, Service -->
-    <section class="info-column">
-      <div class="info-block">
-        <h3>Work / Travel / Volunteer / Service</h3>
-        <p><strong>Work Experience:</strong> I work in dialysis, pediatrics, and senior care while managing real estate. Nursing school is in progress too.</p>
-        <p><strong>Travel:</strong> Domestic and international, especially Mexico. These trips shaped my cultural awareness and empathy in care work.</p>
-        <p><strong>Volunteer:</strong> I help in healthcare settings and mentor students pursuing nursing or real estate careers.</p>
-        <p><strong>Services I’ve Provided:</strong></p>
-        <ul>
-          <li><strong>Mentoring:</strong> Real estate and healthcare career advice</li>
-          <li><strong>Tutoring:</strong> Academic support for nursing and real estate students</li>
-          <li><strong>Community Engagement:</strong> Volunteering in healthcare and charity events</li>
-        </ul>
-      </div>
+<!-- Row 2: Hobbies & Talents -->
+<h2>Hobbies & Talents</h2>
+<div class="info-row">
+  <div class="info-box">
+    <h3>Gaming & Technology</h3>
+    <p>Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
+  </div>
+  <div class="info-box">
+    <h3>Healthcare & Nursing</h3>
+    <p>As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
+  </div>
+  <div class="info-box">
+    <h3>Automotive & Driving</h3>
+    <p>I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
+  </div>
+  <div class="info-box">
+    <h3>Writing & Creativity</h3>
+    <p>Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
+  </div>
+  <div class="info-box">
+    <h3>Cultural Connection & Family</h3>
+    <p>My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
+  </div>
+</div>
+
+<!-- Row 3: Work / Travel / Volunteer / Service -->
+<h2>Work / Travel / Volunteer / Service</h2>
+<div class="info-row">
+  <div class="info-box">
+    <h3>Work Experience</h3>
+    <p>I work in dialysis, pediatrics, and senior care while managing real estate. Nursing school is in progress too.</p>
+  </div>
+  <div class="info-box">
+    <h3>Travel</h3>
+    <p>Domestic and international, especially Mexico. These trips shaped my cultural awareness and empathy in care work.</p>
+  </div>
+  <div class="info-box">
+    <h3>Volunteer</h3>
+    <p>I help in healthcare settings and mentor students pursuing nursing or real estate careers.</p>
+  </div>
+</div>
     </section>
 
   </div>
