--- a/personal-projects.html
+++ b/personal-projects.html
@@ -34,72 +34,72 @@
   <a href="personal-projects.html" class="link-active-glow">Personal Projects</a>
 </div>
 
-<h1>Learning Outside of Class</h1>
+<main class="personal-projects-page fade-in-section">
+  <h1 class="personal-heading">Learning Outside of Class</h1>
+  <div class="personal-grid">
 
-<!-- ROW 1: Clubs -->
-<div class="grid-row">
-  <div class="info-box">
-    <h3>Clubs & Campus Activities</h3>
-    <p>SLCC has many opportunities for you to get involved with student clubs or attend events outside of class.</p>
-    <ul>
-      <li>Utah Criminology Student Association</li>
-      <li>SLCC Student Nurse Organization</li>
-    </ul>
-  </div>
-</div>
+    <!-- ROW 1: Clubs -->
+    <div class="grid-row">
+      <div class="info-box">
+        <h3>Clubs & Campus Activities</h3>
+        <p>SLCC has many opportunities for you to get involved...</p>
+        <ul>
+          <li>Utah Criminology Student Association</li>
+          <li>SLCC Student Nurse Organization</li>
+        </ul>
+      </div>
+    </div>
 
-<!-- ROW 2: Hobbies & Talents -->
-<h2>Hobbies & Talents</h2>
-<div class="grid-row">
-  <div class="info-box">
-    <h3>Gaming & Technology</h3>
-    <p>Gaming on Xbox, learning setups, and optimizing performance have taught me patience and teamwork.</p>
-  </div>
-  <div class="info-box">
-    <h3>Healthcare & Nursing</h3>
-    <p>As a nursing student and dialysis tech, I’m proud of my growth through clinicals and caregiving.</p>
-  </div>
-  <div class="info-box">
-    <h3>Automotive & Driving</h3>
-    <p>I love stick shifts, Jeep Wranglers, and geeking out over car mechanics.</p>
-  </div>
-  <div class="info-box">
-    <h3>Writing & Creativity</h3>
-    <p>Storytelling, humor, and motivation are my therapy. I love making people laugh and think.</p>
-  </div>
-  <div class="info-box">
-    <h3>Cultural Connection & Family</h3>
-    <p>My Mexican roots are my pride. Everything I do honors my family’s sacrifice and legacy.</p>
-  </div>
-</div>
+    <!-- ROW 2: Hobbies & Talents -->
+    <h2>Hobbies & Talents</h2>
+    <div class="grid-row">
+      <div class="info-box">
+        <h3>Gaming & Technology</h3>
+        <p>Gaming on Xbox, setups, and teamwork development...</p>
+      </div>
+      <div class="info-box">
+        <h3>Healthcare & Nursing</h3>
+        <p>I'm a dialysis tech and student — proud of my growth...</p>
+      </div>
+      <div class="info-box">
+        <h3>Automotive & Driving</h3>
+        <p>Stick shifts. Jeep Wranglers. Car guts. I’m in.</p>
+      </div>
+      <div class="info-box">
+        <h3>Writing & Creativity</h3>
+        <p>Humor and stories = therapy. I love to make people laugh.</p>
+      </div>
+      <div class="info-box">
+        <h3>Cultural Connection & Family</h3>
+        <p>My Mexican roots ground everything I do and dream.</p>
+      </div>
+    </div>
 
-<!-- ROW 3: Work, Travel, Volunteer -->
-<h2>Work / Travel / Volunteer / Service</h2>
-<div class="grid-row">
-  <div class="info-box">
-    <h3>Work Experience</h3>
-    <p>I work in dialysis, pediatrics, and senior care while managing real estate. Nursing school is in progress too.</p>
-  </div>
-  <div class="info-box">
-    <h3>Travel</h3>
-    <p>Domestic and international, especially Mexico. These trips shaped my cultural awareness and empathy in care work.</p>
-  </div>
-  <div class="info-box">
-    <h3>Volunteer</h3>
-    <p>I help in healthcare settings and mentor students pursuing nursing or real estate careers.</p>
-  </div>
-  <div class="info-box">
-    <h3>Services I’ve Provided</h3>
-    <ul>
-      <li><strong>Mentoring:</strong> Real estate and healthcare career advice.</li>
-      <li><strong>Tutoring:</strong> Helping peers succeed in coursework.</li>
-      <li><strong>Community Engagement:</strong> Volunteer work and charity events.</li>
-    </ul>
-  </div>
-</div>
+    <!-- ROW 3: Work / Travel / Volunteering -->
+    <h2>Work / Travel / Volunteer / Service</h2>
+    <div class="grid-row">
+      <div class="info-box">
+        <h3>Work Experience</h3>
+        <p>Dialysis, peds, and real estate — all in rotation.</p>
+      </div>
+      <div class="info-box">
+        <h3>Travel</h3>
+        <p>Mexico and more — helped shape my empathy in care work.</p>
+      </div>
+      <div class="info-box">
+        <h3>Volunteer</h3>
+        <p>Healthcare help and student mentoring keep me grounded.</p>
+      </div>
+      <div class="info-box">
+        <h3>Services I’ve Provided</h3>
+        <ul>
+          <li><strong>Mentoring:</strong> For real estate and healthcare peers.</li>
+          <li><strong>Tutoring:</strong> Academic support in my majors.</li>
+          <li><strong>Community:</strong> Events, facilities, and more.</li>
+        </ul>
+      </div>
+    </div>
 
-  <div style="text-align: center; margin-top: 40px;">
-    <a href="courses.html" class="button">← Back to Courses</a>
   </div>
 </main>
 
