--- a/personal-projects.html
+++ b/personal-projects.html
@@ -119,20 +119,22 @@ function toggleMenu() {
 </script>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-  const faders = document.querySelectorAll('.fade-in-section');
-  const appearOptions = { threshold: 0.15, rootMargin: "0px 0px -100px 0px" };
-  const appearOnScroll = new IntersectionObserver(function(entries, observer) {
-    entries.forEach(entry => {
-      if (!entry.isIntersecting) return;
-      entry.target.classList.add('is-visible');
-      observer.unobserve(entry.target);
+  document.addEventListener('DOMContentLoaded', function () {
+    const faders = document.querySelectorAll('.fade-in-section');
+    const appearOptions = { threshold: 0.15 };
+
+    const appearOnScroll = new IntersectionObserver(function (entries, observer) {
+      entries.forEach(entry => {
+        if (!entry.isIntersecting) return;
+        entry.target.classList.add('is-visible');
+        observer.unobserve(entry.target);
+      });
+    }, appearOptions);
+
+    faders.forEach(fader => {
+      appearOnScroll.observe(fader);
     });
-  }, appearOptions);
-  faders.forEach(fader => {
-    appearOnScroll.observe(fader);
   });
-});
 </script>
 
 </body>
