--- a/personal-projects.html
+++ b/personal-projects.html
@@ -38,7 +38,7 @@
   <h1 class="personal-heading">Beyond the Classroom</h1>
 
 <section class="personal-subheading">
-  <p>If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</p>
+  <h2>If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</h2>
 </section>
   <div class="personal-grid">
 
