--- a/personal-projects.html
+++ b/personal-projects.html
@@ -55,7 +55,9 @@
     </div>
 
     <!-- ROW 2: Hobbies & Talents -->
+  <section class="personal-project-page-v2">
     <h2>Hobbies & Talents</h2>
+  </section> 
     <div class="grid-row">
       <div class="info-box">
         <h3>Gaming & Technology</h3>
@@ -80,7 +82,9 @@
     </div>
 
     <!-- ROW 3: Work / Travel / Volunteering -->
+    <section class="personal-projects-page-v2">
     <h2>Work / Travel / Volunteer / Service</h2>
+    </section>
     <div class="grid-row">
       <div class="info-box">
         <h3>Work Experience</h3>
