--- a/personal-projects.html
+++ b/personal-projects.html
@@ -37,9 +37,7 @@
 <main class="personal-projects-page fade-in-section">
   <h1 class="personal-heading">Beyond the Classroom</h1>
 
-<section class="personal-projects-page-v2">
-  <h2>If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</h2>
-</section>
+  <h2 class="personal-projects-page-v2">If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</h2>
   <div class="personal-grid">
 
     <!-- ROW 1: Clubs -->
