--- a/personal-projects.html
+++ b/personal-projects.html
@@ -37,7 +37,10 @@
 <main class="personal-projects-page fade-in-section">
   <h1 class="personal-heading">Beyond the Classroom</h1>
 
-  <h2 class="personal-projects-page-v2">If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</h2>
+  <div class="personal-subheading">
+    <p>If you’re here to stalk, might as well learn something. Turns out, I still have goodness in my heart. Scroll on to learn more. :3</p>
+  </div>
+
   <div class="personal-grid">
 
     <!-- ROW 1: Clubs -->
@@ -53,9 +56,7 @@
     </div>
 
     <!-- ROW 2: Hobbies & Talents -->
-  <section class="personal-project-page-v2">
     <h2>Hobbies & Talents</h2>
-  </section> 
     <div class="grid-row">
       <div class="info-box">
         <h3>Gaming & Technology</h3>
@@ -80,9 +81,7 @@
     </div>
 
     <!-- ROW 3: Work / Travel / Volunteering -->
-    <section class="personal-projects-page-v2">
     <h2>Work / Travel / Volunteer / Service</h2>
-    </section>
     <div class="grid-row">
       <div class="info-box">
         <h3>Work Experience</h3>
@@ -105,6 +104,7 @@
         </ul>
       </div>
     </div>
+
   </div>
 </main>
 
